2011-04-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-action): Remove properties and
	simplify subject in `gnus-registry-handle-action'.
	(gnus-registry-spool-action): Get subject and sender from message if
	they are not passed in.
	(gnus-registry-handle-action): Remove properties and simplify subject
	consistently.

2011-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* registry.el: Require CL before using defmacro*.

2011-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-treat-date): Assume that
	gnus-article-date-headers may be a group parameter.

2011-04-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-handle-action): More debugging.

	* gnus-start.el (gnus-gnus-to-newsrc-format): Add a way to run
	interactively so the newsrc file can contain foreign groups too.
	Useful for debugging but not much for users.

2011-04-07  David Engster  <dengste@eml.cc>

	* registry.el (registry-usage-test): Only do
	`registry-lookup-breaks-before-lexbind' testing for Emacs24 with
	lexical binding.

2011-04-06  David Engster  <dengste@eml.cc>

	* registry.el, gnus-registry.el: Use `ignore-errors' instead of third
	argument NOERROR for `require', since XEmacs 21.4 does not support it.

2011-04-06  David Engster  <dengste@eml.cc>

	* registry.el (initialize-instance): Change :after to :AFTER to be
	compatible with old EIEIO version in XEmacs.

2011-04-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-post-process-groups)
	(gnus-registry--split-fancy-with-parent-internal): Fix splitting bugs
	and provide better messaging.

2011-04-06  David Engster  <dengste@eml.cc>

	* Makefile.in (fail-on-warning): New rule to compile with warnings as
	errors.

	* dgnushack.el (dgnushack-compile-error-on-warn): New function to call
	dgnushack-compile with error-on-warn enabled, and to signal an error if
	clean compilation failed.